--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,10 @@
 # Items to ignore when downloading a zip
+
+# Files
 .gitattributes export-ignore
+pmpro-events-banner.png export-ignore
+README.md export-ignore
+
+# Folders
 .github export-ignore
 .wordpress-org export-ignore
-README.md export-ignore
